[metadata]
name = septentrion
description = Execute PostGreSQL migrations
version = 0.1.0
author = peopledoc
author_email = someone@people-doc.com
url = https://github.com/peopledoc/septentrion
long_description = file: README.md
long_description_content_type = text/markdown
keywords = migrations postgresql
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    psycopg2_binary
    Click
    sqlparse
    colorama

[options.entry_points]
console_scripts =
    septentrion = septentrion.__main__:main

[options.extras_require]
dev =

test =
    pytest
    pytest_click
    pytest-mock
    pytest-cov

lint =
    black
    isort

[bdist_wheel]
universal = 1

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
known_first_party=septentrion
force_single_line=True
not_skip = __init__.py

[tool:pytest]
addopts = --cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=septentrion -vv
