[metadata]
name = septentrion
description = Python CLI tool for managing and executing hand-written PostgreSQL migrations
# version placeholder
author = PeopleDoc
author_email = joachim.jablon@people-doc.com
url = https://github.com/peopledoc/septentrion
project_urls =
    Documentation=https://septentrion.readthedocs.io/
    GitHub=https://github.com/peopledoc/septentrion/
    PyPI=https://pypi.org/project/septentrion/
    Travis CI=https://travis-ci.org/peopledoc/septentrion
    Codecov=https://codecov.io/gh/peopledoc/septentrion
    Code of conduct=https://github.com/peopledoc/septentrion/blob/master/CODE_OF_CONDUCT.md

long_description = file: README.rst
keywords = migrations postgresql
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    psycopg2_binary
    Click
    sqlparse
    colorama
    importlib-metadata
    dataclasses; python_version <= "3.6"

[options.packages.find]
include =
    septentrion
    septentrion.*

[options.entry_points]
console_scripts =
    septentrion = septentrion.__main__:main

[options.extras_require]
dev =
    tox
    black
    isort
    github-changelog

test =
    pytest
    pytest_click
    pytest-mock
    pytest-cov

lint =
    black
    isort
    flake8
    mypy
    check-manifest

docs =
    doc8
    sphinx
    sphinx_autodoc_typehints
    sphinxcontrib-programoutput

docs_spelling =
    sphinxcontrib-spelling

[flake8]
max-line-length = 88

[doc8]
max-line-length=88
ignore-path=docs/_build

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
known_first_party=septentrion
not_skip = __init__.py

[tool:pytest]
addopts =
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=septentrion -vv
testpaths =
    tests/unit
    tests/integration
    tests/acceptance

[mypy-setuptools.*,colorama.*,psycopg2.*,sqlparse.*,importlib_metadata.*]
ignore_missing_imports = True

[coverage:report]
exclude_lines =
    raise NotImplementedError
    coverage: exclude
    if TYPE_CHECKING:
    [ ]+\.\.\.$
